tested speed controller and rear motor. also got joystick controller working. hey mom. santa, can evan have a red rider bb gun pls. also a car that goes zoom zoom pls.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,6 +204,7 @@ include_directories(
 ##### RC-VIP
 install(PROGRAMS
   src/drive_relay.py
+  src/joystick_drive.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
