--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -7,8 +7,11 @@ include_directories(
     
     )
 
+
 generate_arduino_firmware(arduino
     SRCS arduino_main.cpp ${ROS_LIB_DIR}/time.cpp
     BOARD nano328
     PORT /dev/ttyUSB0
 )
+#target_link_libraries(rc_vip_firmware_arduino ${catkin_LIBRARIES})
+#add_dependencies(rc_vip_firmware_arduino  rc_vip_generate_messages_cpp)
