--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   sensor_msgs
   std_msgs
-  message_generation
+  rcvip_msgs
   rosserial_arduino
   rosserial_client
 )
@@ -54,11 +54,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
- add_message_files(
-   FILES
-   CarSensors.msg
-   CarControl.msg
- )
+# add_message_files(
+#   FILES
+#   CarSensors.msg
+#   CarControl.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -75,12 +75,12 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   sensor_msgs
-   std_msgs
-   rc_vip
- )
+# generate_messages(
+#   DEPENDENCIES
+#   sensor_msgs
+#   std_msgs
+#   rcvip_msgs
+# )
 
 catkin_package(
     
