--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,8 @@ install(PROGRAMS
 
 # Mark other files for installation (e.g. launch and bag files, etc.)
  install(FILES
-   launch/demo.launch
+   launch/car.launch
+   launch/joystick.launch
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
  )
 
